force-app/main/default/objects/Survey__c/fields/Active_Survey__c.field-meta.xml
<CustomField>
    <fullName>Active_Survey__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active Survey</label>
    <type>Checkbox</type>
</CustomField>