force-app/main/default/objects/Survey__c/fields/Are_You_Satisfied_with_Cafetaria_Vender__c.field-meta.xml
<CustomField>
    <fullName>Are_You_Satisfied_with_Cafetaria_Vender__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Are You Satisfied with Cafetaria Vendor?</label>
    <type>Checkbox</type>
</CustomField>