force-app/main/default/objects/Survey__c/fields/Are_you_satisfied_with_the_quality_of__c.field-meta.xml
<CustomField>
    <fullName>Are_you_satisfied_with_the_quality_of__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Are you satisfied with quality of Food?</label>
    <type>Checkbox</type>
</CustomField>