force-app/main/default/objects/Survey__c/fields/Badge_Number__c.field-meta.xml
<CustomField>
    <fullName>Badge_Number__c</fullName>
    <label>Badge Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>