force-app/main/default/objects/Survey__c/fields/did_you_gain_any_knowledge_from_this_ses__c.field-meta.xml
<CustomField>
    <fullName>did_you_gain_any_knowledge_from_this_ses__c</fullName>
    <defaultValue>false</defaultValue>
    <label>did you gain any knowledge from this ses</label>
    <type>Checkbox</type>
</CustomField>