force-app/main/default/objects/Survey__c/fields/Do_we_need_to_have_more_Indoor_Games__c.field-meta.xml
<CustomField>
    <fullName>Do_we_need_to_have_more_Indoor_Games__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do we need to have more Indoor Games</label>
    <type>Checkbox</type>
</CustomField>