force-app/main/default/objects/Survey__c/fields/Do_you_feel_that_the_speakers_were_clear__c.field-meta.xml
<CustomField>
    <fullName>Do_you_feel_that_the_speakers_were_clear__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do you feel that the speakers were clear</label>
    <type>Checkbox</type>
</CustomField>