force-app/main/default/objects/Survey__c/fields/Do_you_think_Dell_should_have_Day_Care__c.field-meta.xml
<CustomField>
    <fullName>Do_you_think_Dell_should_have_Day_Care__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do you think Dell should have &quot;Day Care&quot;</label>
    <type>Checkbox</type>
</CustomField>