force-app/main/default/objects/Survey__c/fields/Do_you_think_we_should_have_more_options__c.field-meta.xml
<CustomField>
    <fullName>Do_you_think_we_should_have_more_options__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do you think we should have more options</label>
    <type>Checkbox</type>
</CustomField>