force-app/main/default/objects/Survey__c/fields/Does_2_Badminton_Courts_sufficient__c.field-meta.xml
<CustomField>
    <fullName>Does_2_Badminton_Courts_sufficient__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Are two badminton courts sufficient</label>
    <type>Checkbox</type>
</CustomField>