force-app/main/default/objects/Survey__c/fields/How_clear_are_you_on_the_take_away_fr__c.field-meta.xml
<CustomField>
    <fullName>How_clear_are_you_on_the_take_away_fr__c</fullName>
    <defaultValue>false</defaultValue>
    <label>How clear are you on the take away fr</label>
    <type>Checkbox</type>
</CustomField>