force-app/main/default/objects/Survey__c/fields/How_did_you_find_the_allhands__c.field-meta.xml
<CustomField>
    <fullName>How_did_you_find_the_allhands__c</fullName>
    <defaultValue>false</defaultValue>
    <label>How did you find the allhands</label>
    <type>Checkbox</type>
</CustomField>