force-app/main/default/objects/Survey__c/fields/How_do_you_rate_the_entertainment_events__c.field-meta.xml
<CustomField>
    <fullName>How_do_you_rate_the_entertainment_events__c</fullName>
    <defaultValue>false</defaultValue>
    <label>How do you rate the entertainment events</label>
    <type>Checkbox</type>
</CustomField>