force-app/main/default/objects/Survey__c/fields/How_easy_to_find_what_you_were_looking__c.field-meta.xml
<CustomField>
    <fullName>How_easy_to_find_what_you_were_looking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>How easy to find what you were looking?</label>
    <type>Checkbox</type>
</CustomField>