force-app/main/default/objects/Survey__c/fields/How_engaging_was_your_instructor__c.field-meta.xml
<CustomField>
    <fullName>How_engaging_was_your_instructor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>How engaging was your instructor?</label>
    <type>Checkbox</type>
</CustomField>