force-app/main/default/objects/Survey__c/fields/How_often_do_you_think_these_meetings_sh__c.field-meta.xml
<CustomField>
    <fullName>How_often_do_you_think_these_meetings_sh__c</fullName>
    <defaultValue>false</defaultValue>
    <label>How often do you think these meetings sh</label>
    <type>Checkbox</type>
</CustomField>