force-app/main/default/objects/Survey__c/fields/How_satisfied_are_you_with_Sodexo_servic__c.field-meta.xml
<CustomField>
    <fullName>How_satisfied_are_you_with_Sodexo_servic__c</fullName>
    <defaultValue>false</defaultValue>
    <label>How satisfied are you with Sodexo servic</label>
    <type>Checkbox</type>
</CustomField>