force-app/main/default/objects/Survey__c/fields/How_visually_appealing_is_our_website__c.field-meta.xml
<CustomField>
    <fullName>How_visually_appealing_is_our_website__c</fullName>
    <defaultValue>false</defaultValue>
    <label>How visually appealing is our website?</label>
    <type>Checkbox</type>
</CustomField>