force-app/main/default/objects/Survey__c/fields/Overall_how_well_does_our_website_meet__c.field-meta.xml
<CustomField>
    <fullName>Overall_how_well_does_our_website_meet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Overall how well does our website meet?</label>
    <type>Checkbox</type>
</CustomField>