force-app/main/default/objects/Survey__c/fields/Survey_Type__c.field-meta.xml
<CustomField>
    <fullName>Survey_Type__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Survey Type</label>
    <type>Checkbox</type>
</CustomField>