force-app/main/default/objects/Survey__c/fields/Was_the_audio_quality_good__c.field-meta.xml
<CustomField>
    <fullName>Was_the_audio_quality_good__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Was the audio quality good?</label>
    <type>Checkbox</type>
</CustomField>