force-app/main/default/objects/Survey__c/fields/was_the_session_interactive__c.field-meta.xml
<CustomField>
    <fullName>was_the_session_interactive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>was the session interactive?</label>
    <type>Checkbox</type>
</CustomField>