force-app/main/default/objects/Survey__c/fields/Were_you_satisfied_with_the_information__c.field-meta.xml
<CustomField>
    <fullName>Were_you_satisfied_with_the_information__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Were you satisfied with the information</label>
    <type>Checkbox</type>
</CustomField>