force-app/main/default/objects/Survey__c/fields/What_topic_or_information_would_you_reco__c.field-meta.xml
<CustomField>
    <fullName>What_topic_or_information_would_you_reco__c</fullName>
    <defaultValue>false</defaultValue>
    <label>What topic or information would you reco</label>
    <type>Checkbox</type>
</CustomField>