force-app/main/default/objects/Survey__c/fields/would_you_recommend_our_website_tofriend__c.field-meta.xml
<CustomField>
    <fullName>would_you_recommend_our_website_tofriend__c</fullName>
    <defaultValue>false</defaultValue>
    <label>would you recommend website to Friend?</label>
    <type>Checkbox</type>
</CustomField>