force-app/main/default/objects/Survey__c/fields/X2_How_do_you_feel_about_the_information__c.field-meta.xml
<CustomField>
    <fullName>X2_How_do_you_feel_about_the_information__c</fullName>
    <defaultValue>false</defaultValue>
    <label>How do you feel about the information</label>
    <type>Checkbox</type>
</CustomField>