force-app/main/default/objects/Survey__c/fields/X3_How_relevant_is_the_material_to_your__c.field-meta.xml
<CustomField>
    <fullName>X3_How_relevant_is_the_material_to_your__c</fullName>
    <defaultValue>false</defaultValue>
    <label>How relevant is the material to your</label>
    <type>Checkbox</type>
</CustomField>