force-app/main/default/objects/Survey__c/fields/X5_Do_you_have_any_other_comments_quest__c.field-meta.xml
<CustomField>
    <fullName>X5_Do_you_have_any_other_comments_quest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>5.	Do you have any other comments, quest</label>
    <type>Checkbox</type>
</CustomField>