force-app/main/default/objects/Survey__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Survey_Type__c</columns>
    <columns>Are_you_satisfied_with_the_quality_of__c</columns>
    <columns>Were_you_satisfied_with_the_information__c</columns>
    <columns>Was_the_audio_quality_good__c</columns>
    <columns>Do_you_feel_that_the_speakers_were_clear__c</columns>
    <columns>How_often_do_you_think_these_meetings_sh__c</columns>
    <columns>What_topic_or_information_would_you_reco__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>